<resources>
    <string name="app_name">DrukINFO</string>
    <string name="title_activity_navigation__main">Districts</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_rateus_activity">Rateus_activity</string>
    <string name="title_activity_about_us_">About_us_Activity</string>
    <string name="aboutUs_content">Kinzang Pelden \n Kishan Gurung \n Megnath Gurung \n Sonam Choki</string>
    <string name="aboutUs_content1">Any kind of enqueries and feedbacks are welcomed at drukinfo@gmail.com</string>
    <string name="thimphu_festival">Thimphu Tshechu \n\n
        The annual national holiday is held for three consecutive days, beginning on 10th day of the 8th month of lunar calendar.
        The history of Thimphu Tshechu began in 1867, when it was initiated by the 4th Desi, Gyalse Tenzin Rabgay. During its first
        years, the tshechu only features a few dances, performed by monks only. Thimphu Tshechu however was never the same again in
        the 1950, under the third King of Bhutan, Jigme Dorji Wangchuk added colors and variations to the festival with a number of
        masked dances performed by monks called Boed chhams. Despite the changes, the religious core of the festival is still kept intact.
        The most famous dances during Thimphu Tshechu are Shaw Shachi (Dance of the Stags) and Guru Tshengye (Eight Manifestations of Guru). \n\n
        Start Date: Sep 19, 2018 \n End Date: Sep 21, 2018 \n Destination: Thimphu Dzong \n
        Thimphu Drupchen \n\n
        Thimphu Drupchen or Drubchen (popularly known as Thimphu Dromchoey) is performed at the Thimphu Tashichhodzong. The sacred masked dance is dedicated
        to appeasing the protecting deity of Bhutan, Pelden Lhamo. The dance ceremony was instituted between 1705 and 1709 by Kuenga Gyaltshen, the first
        reincarnation of Jampel Dorji, son of Zhabdrung Ngawang Namgyal. According to legend, Pelden Lhamo appeared before him and performed the dances while
        he was in meditation. Based on these dances, Kuenga Gyeltshen initiated the dance ceremony. Thimphu Drubchen is a 5 day event preceding the popular
        3 day Thimphu Tsechu festival. Because it is mainly to appease the protecting deities, it is considered more sacred and was not open for tourists until recently.
        Photographing may be prohibited during the Drubchen. \n\n
         Start Date: Sep 15, 2018 \n End Date: Sep 15, 2018 \n Destination: Thimphu Dzong \n
    </string>
    <string name="paro_festival">Paro Tshechu \n\n The Paro Tshechu is one of the biggest festivals in the country. On the first day, all mask dances are held
        inside the courtyard of the Dzong. In the subsequent days, the courtyard outside the dzong hosts the festival.Paro Tsechu is one of the most popular
        festivals in Bhutan. Featuring dances performed by trained monks and laymen in amazing masks and costumes, Tsechus (festivals) are one of the best ways
        to experience the ancient living culture of Bhutan. A Tsechu is a Buddhist festival in honour of Guru Rimpoche, the saint who brought Buddhism to Bhutan.
        A highlight of the Paro Tsechu is the unfurling of the silk Thangka – so large it covers the face of an entire building and is considered one of the most
        sacred blessings in the whole of Bhutan. The Thangka, known in Bhutan as a ‘thongdroel’ is a religious picture scroll, and is only exhibited for a few
        hours at daybreak on the final day of the festival enabling the people to obtain its blessing. This holy scroll confers liberation by the mere sight of
        it (the meaning of the word thongdroel in Bhutanese). This tour also takes advantage of the beautiful spring time growth with stunning hikes through
        the countryside to a Rhododendron forest in Phobjikha, as well as a visit to the Lamperi a Rhododendron Festival near Dochu La Pass. The sacred sites of Paro,
        Thimphu and Punakha are also featured. \n\n
        Start Date: March 27, 2018 \n End Date: March 31, 2018 \n Destination: Paro Dzong
    </string>
    <string name="Drugyal"> 1)Drugyel Dzong\n \n Once a massive fortress that stood tall and served as one of the greatest Buddhist monasteries, only ruins remain on the site of the famous Drukgyel Dzong.\n\nLocated in the upper district of Paro, this monastery was established in 1649 by the famous Tenzin Drukdra after they were triumphant over Tibet’s invasion.\n\n
          Location: Paro District 11001, Bhutan</string>
    <string name="Buddha_point">2) Buddha Point\n\n Great Buddha Dordenma is a gigantic Shakyamuni Buddha statue in the mountains of Bhutan celebrating the 60th anniversary of fourth king Jigme Singye Wangchuck.\n\nThe statue houses over one hundred thousand smaller Buddha statues, each of which, like the Great Buddha Dordenma itself, are made of bronze and gilded in gold.\n\n
         Location‎: ‎Bhutan\n Completion date‎: ‎September 2015\n Height‎: ‎54 metres (177 ft)\n Material‎: ‎bronze</string>
    <string name="Memorial_Chorten">3)Memorial Chorten\n\n This landmark of Thimphu was built in 1974 in the memory of third King, Jigme Dorji Wangchuk,\nwho is popularly regarded as Father of Modern Bhutan.\n\nIt is a four-storey tall white building, containing statues and iconography of deities from complex tantric teachings and serves as an important place of worship for Thimphu residents, as well as from other parts of the country.</string>
    <string name="Tag_tshang">4)Taktshang Monastery\n\n The Tiger’s Nest Monastery is a sacred Buddhist site located near Paro, Bhutan. It was constructed in 1692, around the cave where Guru Rinpoche first meditated, the event that introduced Buddhism into Bhutan.\n\nThere is a legend that Guru Rinpoche was carried from Tibet to this location on the back of a tigress, thus giving it the name “Tiger’s Nest.”</string>
    <string name="Dochula_pass">1)Dochula Pass\n\n The Dochula Pass is a mountainpass in the snow covered Himalayas within Bhutan \n\nOn the road from Thimpu to Punakha where 108 memorial chortens or stupas known as "Druk Wangyal Chortens" have been built by Ashi Dorji Wangmo Wangchuk, the eldest Queen Mother. </string>
    <string name="Chele_La">2)Chelela Pass \n\n Chele la top 3810m height, separates Haa and Paro valley. It is one of the highest motor-able pass in Bhutan. Drive to the pass is through dense spruce and larch forests along the gorgreous mountain slope.\n\nOn a clear day you can see the spectacular views of Mt. Jomolhari, Jichu Drake and adjoining Peaks to the North West, as well as splendid view of Paro and Haa valley.</string>
    <string name="Thrumshing_La">3)Thrumshingla Pass \n\n Thrumshing La separates Bumthang and Lhuentse Districts and forms the watershed between Raidāk and Manas River systems.
        It is the second-highest mountain pass in Bhutan, connecting its central and eastern regions.\n\nIt is located on a bend of Lateral Road at the border of Bumthang District (Ura Gewog, leaving Ura southbound) and Mongar District (Saling Gewog, toward Sengor) along the border with Lhuntse District to the east. </string>
    <string name="Yotongla">4)Yotongla Pass \n\n Yotongla Pass at 11,000 ft altitude is the highest pass. It is quite strange that from early April and May, we do not see snow at this height.\n\nTop of the pass is fully covered by mist most of the time. Prayer flags hang on top of the pass.</string>
    <string name="Pele_la"> 5)Pelela Pass \n\n Pele la pass (3420m), is marked by a chorten and an array of prayer flags. On a clear day (which is rare in these parts) mount Jhomolhari (7314m)and Jichu Drakye (6989m) are visible.\n\nPele La pass marks the western border of Jigme Singye Wangchuck (formerly the Black Mountains) National Park and is the gateway to central Bhutan.</string>
    <string name="Jomolhari">6) Jomolhari \n\n Jomolhari or Chomolhar  sometimes known as "the bride of Kangchenjunga”, is a mountain in the Himalayas, straddling the border between Yadong County of Tibet, China and the Thimphu district of Bhutan. The north face rises over 2,700 metres (8,900 ft) above the barren plains. The mountain is the source of the Paro Chu (Paro river) which flows from the south side and the Amo Chu which flows from the north side.\n\nOn the Bhutanese side is a Jomolhari Temple, toward the south side of the mountain about a half-day's journey from the army outpost between Thangthangkha and Jangothang at an altitude of 4150 meters. Religious practitioners and pilgrims visiting Mt. Jomolhari stay at this temple. There are several other sacred sites near Jomolhari Temple, including meditation caves of Milarepaand Gyalwa Lorepa. Within an hour's walk up from the temple at an altitude of c. 4450 meters is Tseringma Lhatso, the "spirit lake" of Tsheringma
    </string>
    <string name="Lampelri_park">1) Lampelri Park\n\n The botanical park is situated between an elevation range of 2,100 metres (6,900 ft) and 3,750 metres (12,300 ft)...\nThere is a botanical garden of rhododendrons with in it.\n\nThe park has a lake known as Baritsho Lake which has religious sanctity as the local people give votive offerings.\n
          \n\nCountry‎: ‎Bhutan \n
          Plant‎: ‎Rhododendron garden with 46 species;\n
          Area‎: ‎47 km2 (18 sq mi)\n
          Animal‎: ‎Monal pheasants, blood pheasants, m.\n
    </string>
    <string name="Takin_park">2) Takin Park\n\n Located in the district of Motithang in Thimphu, Motithang Takin Preserve serves as the home of the famous species of takin.\nMany travelers consider visiting this zoo-converted-reserve as one of the best tips while traveling to Bhutan.\n
         Timings: Tuesday to Sunday – 9 AM to 4 PM;\nClosed on Mondays\n\n Entry Fee:\n
        •  Locals: INR 10 per person\n
        •  SAARC National: INR 30 per person\n
        •  Foreigners: INR 50 per person\n
    </string>
    <string name="Botanical_Garden">3) Botanical Garden \n\nThe Royal Botanical Garden, Serbithang was established in 1999 under National Biodiversity Centre, Ministry of Agriculture and Forests, Serbitang as an ex-situ plant conservation area and to commemorate the Silver Jubilee Celebration of the 4th King of Bhutan, His Majesty Jigme Singye Wangchuck.
        The primary functions of the Royal Botanical Garden are to:\n\n
        i. Serve as the living repository of plant genetic diversity for  ex situ conservation and research.\n
        ii.    Serve as a rescue centre for rare and threatened native floral species (prioritized native floral species).\n
        iii.Promote propagation of prioritized native plants species to reduce pressures on collection from the wild and to ensure
     </string>
    <string name="Norzin_Lam">4)Norzin Lam\n\n The capital city is probably the most popular choice for shopaholics. The main street of Norzin Lam is filled with shops selling various items – souvenirs, woolen clothes, crafts, and the local wine. Although slightly expensive, some things are worth buying there if you’re not going further till Bumthang. \n\n
         Key attractions:\nTextile building and the textile shops in the middle lane of Norzin Lam for buying some of the best handmade textiles, including Gho and Kira – the traditional attire of Bhutan for men and women respectively
    </string>
</resources>