<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fragmentbg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="177dp"
                android:src="@drawable/lampelri_park" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Lampelri_park"
                android:textColor="#faf7f7"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"

                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="248dp"
                android:src="@drawable/motpark" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Takin_park"
                android:textColor="#faf7f7"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="248dp"
                android:src="@drawable/hobjikha" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Botanical_Garden"
                android:textColor="#faf7f7"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="248dp"
                android:src="@drawable/norzin_lam_thimphu" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Norzin_Lam"
                android:textColor="#faf7f7"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />


        </LinearLayout>

    </ScrollView>

</LinearLayout>


